Styling of module card to avoid content being cut off by set height.
Styling of long links to have ellipsis instead of being cut off abruptly.

--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,17 @@ div#root {
   background-color: rgba(94, 55, 195, 0.3);
 }
 
+.break-long {
+  overflow-wrap: break-word;
+  word-wrap: break-word;
+  -ms-word-break: break-all;
+  word-break: break-word;
+  -ms-hyphens: auto;
+  -moz-hyphens: auto;
+  -webkit-hyphens: auto;
+  hyphens: auto;
+}
+
 /* module chips section in the add classroom form dialog */
 .modules-select-menu > div {
   display: flex;
